2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Basic generalized constant propagation analysis for pdk and mcs51 pointers.

2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Fix dumping of generalized constant propagation analysis graph debug info for initialization of global objects.

2023-07-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  support/regression/tests/bug-3607.c:
	  Fix bug #3607, using a variant of the patch by Oleg Endo.

2023-06-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Fix bug #3609.
	* src/z80/gen.c,
	  support/regression/tests/bug-3606.c:
	  Fix bug #3606.
	* src/hc08/gen.c:
	  Fix bug #3604.
	* doc/README.txt:
	  Fix bug #3605.

2023-06-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Improve 16-bit comparisons.

2023-06-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve generalized constant propagation analysis for /, %.

2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve interval / bit synchronization in generalized constant propagation analysis.

2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  support/valdiag/tests/bug-3603.c:
	  Fix bug #3603.
	* src/SDCCmain.c,
	  src/pdk/main.c,
	  src/z80/main.c:
	  Improve error message on invalid -mmarch option, part of RFE #881.

2023-06-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Change references to bin\cc1.exe to libexec\sdcc\cc1 (picked from nativecrosstools branch).

2023-06-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCopt.c,
	  src/hc08/main.c,
	  src/*/ralloc2.cc:
	  Fixes for generalized constant propagation and support functions for _BitInt.

2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc: