@@ -1,3 +1,9 @@
+2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCgenconstprop.cc,
+	  src/pdk/main.c:
+	  Generalized constant propagation optimization for pdk and mcs51 pointers.
+
 2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
